# tanmatsu-template-grace

./: .gitignore  CMakeLists.txt  Makefile  PORTING.md  README.md  TRACKING.md  app.ld  toolchain-app.cmake
.claude-memory/: MEMORY.md  feedback_no_background_builds.md  feedback_stay_in_project.md  project_graceloader.md
app/: CMakeLists.txt  app.ld  app_version.script  link_app_so.cmake  link_app_so.sh  partition_tables  sdkconfigs
app/main/: CMakeLists.txt  main.c
components/kbelf/: CMakeLists.txt
components/kbelf/src/: fastopen.c  fastopen.h  kbelf_lib_all.c  kbelf_lib_c.c  kbelf_lib_esp_idf.c  kbelf_lib_freertos.c  kbelf_lib_gcc.c  kbelf_lib_m.c  kbelf_lib_pax_codecs.c  kbelf_lib_pax_gfx.c  kbelf_lib_pthread.c  kbelf_reloc.c  kbelfx.c
components/kbelf/src/port/: riscv.c
include/: bmi270_interface.h  custom_certificates.h  dsi_panel_espressif_ek79007.h  dsi_panel_espressif_ili9881c.h  dsi_panel_espressif_lt8912b.h  dsi_panel_nicolaielectronics_st7701.h  es8156.h  es8156_regs.h  esp_hosted_host_fw_ver.h  graceloader.h  graceloader_imu.h  mpr121.h  nvs_settings.h  nvs_settings_firmware.h  nvs_settings_hardware.h  nvs_settings_helpers.h  nvs_settings_lora.h  nvs_settings_meshcore.h  nvs_settings_owner.h  nvs_settings_repository.h  nvs_settings_theme.h  sdcard.h  sdkconfig.h  ssd1619.h  ssd1619_lut.h  tanmatsu_coprocessor.h  transport_drv.h  wifi_connection.h  wifi_remote.h  wifi_settings.h
include/bsp/: audio.h  device.h  display.h  i2c.h  input.h  led.h  macro.h  mch2022.h  orientation.h  power.h  (+2 more)
main/: CMakeLists.txt  crt0.c  exported_symbols.cmake  generate_exports_from_elf.sh  idf_component.yml  main.c  sdcard.c  sdcard.h  symbol_export.py  symbol_export.sh
main/symbol_export/: all  c  freertos  gcc  m  pax-codecs  pax-gfx  pthread
metadata/: metadata.json
tools/: extract_headers.sh  migrate.sh
(+8 files in other folders)
